# OSI

./: Child.c
laba_1/: Parent.c  data_float.txt
laba_2/: kmeans.c
laba_3/: child  child.c  data.txt  parent  parent.c
laba_4/: CMakeLists.txt  area_calculator.h  area_impl1.c  area_impl2.c  e_calculator.h  e_impl1.c  e_impl2.c  prog1.c  prog2.c
